src/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: { { appName } }
spec:
  replicas: 3
  selector:
    matchLabels:
      app: { { appName } }
  template:
    metadata:
      labels:
        app: { { appName } }
    spec:
      containers:
        - name: app
          image: { { image } }
          ports:
            - containerPort: { { port } }
