src/templates/networkpolicy-allow-egress-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-app-to-db
spec:
  podSelector:
    matchLabels:
    app: { { appName } }
  egress:
    - to:
        - podSelector:
            matchLabels:
              db: { { databaseName } }
  policyTypes:
    - Egress
